# Maximin

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
maximin/: __init__.py  _opt.py  confidence_regions.py  decision_spaces.py  outcome_models.py  problem_objectives.py  robust_constraints.py  solvers.py
test/: __init__.py  test_cobb_douglas.py  test_confidence_regions.py  test_decision_spaces.py  test_outcome_models.py  test_problem_objectives.py  test_robust_constraints.py  test_solvers.py
