[project]
name = "maximin"
version = "0.0.1"
description = "Robust optimization: maximize worst-case objective over an uncertainty set"
authors = [{ name = "Bob Wilson", email = "bob.wilson@convexanalytics.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = ["optimization", "robust", "maximin", "uncertainty"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "clarabel>=0.11.1",
    "numpy>=2.2.5,<3",
    "scipy>=1.15.2,<2",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "black>=25.1.0,<26",
    "ruff>=0.11.6,<0.12",
    "mypy>=1.14.0,<2",
    "maximin[plot]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "NPY",    # numpy-specific rules
    "RUF",    # ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by black)
    "E741",   # Ambiguous variable name (common in math: l, I, O)
    "N803",   # Argument name should be lowercase (allows single-letter math vars)
    "N806",   # Variable in function should be lowercase (allows math notation)
    "N802",   # Function name should be lowercase (allows math property names: A, Sigma)
    "NPY002", # Allow numpy.random.Generator for newer code
    "SIM103", # Return condition directly (style guide prefers explicit if/return)
    "SIM108", # Use ternary operator (sometimes clearer to use if-else)
]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = [
    "B011",   # Don't require assertRaises for tests
    "N802",   # Function name should be lowercase (test class methods can be camelCase)
]

[tool.ruff.lint.isort]
known-first-party = ["maximin"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# Mypy configuration
[tool.mypy]
python_version = "3.11"

files = ["maximin", "test"]
mypy_path = "$MYPY_CONFIG_FILE_DIR"
namespace_packages = true
explicit_package_bases = true

platform = "darwin"

check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = false
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true

pretty = true
show_error_codes = true
show_error_context = true

strict_equality = true
extra_checks = true

warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "clarabel",
    "scipy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "test.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
